portfolio section designed

--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
                 <h3>Web Development</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam fugiat veritatis, repudiandae eos,
                     accusantium earum sequi ullam facilis natus dolore odit ducimus unde molestias!</p>
-                    <a href="#" class="btn">Read More</a>
+                <a href="#" class="btn">Read More</a>
             </div>
-            
+
             <div class="services-box">
-                <i class='bx bxs-paint' ></i>
+                <i class='bx bxs-paint'></i>
                 <h3>Graphic Design</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam fugiat veritatis, repudiandae eos,
                     accusantium earum sequi ullam facilis natus dolore odit ducimus unde molestias!</p>
-                    <a href="#" class="btn">Read More</a>
+                <a href="#" class="btn">Read More</a>
             </div>
 
             <div class="services-box">
@@ -93,9 +93,69 @@
                 <h3>Digital Marketing</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam fugiat veritatis, repudiandae eos,
                     accusantium earum sequi ullam facilis natus dolore odit ducimus unde molestias!</p>
-                    <a href="#" class="btn">Read More</a>
+                <a href="#" class="btn">Read More</a>
             </div>
+        </div>
+    </section>
 
+    <!-- porfolio section -->
+    <section class="portfolio" id="portfolio">
+        <h2 class="heading">Latest <span>Project</span></h2>
+        <div class="portfolio-container">
+            <div class="portfolio-box">
+                <img src="Images/project-1.png" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum similique qui esse, assumenda
+                        maiores laboriosam odit quae.</p>
+                        <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="Images/project-2.png" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum similique qui esse, assumenda
+                        maiores laboriosam odit quae.</p>
+                        <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="Images/project-3.png" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum similique qui esse, assumenda
+                        maiores laboriosam odit quae.</p>
+                        <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="Images/project-4.jpeg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum similique qui esse, assumenda
+                        maiores laboriosam odit quae.</p>
+                        <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="Images/project-5.png" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum similique qui esse, assumenda
+                        maiores laboriosam odit quae.</p>
+                        <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="Images/project-6.jpeg" alt="">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum similique qui esse, assumenda
+                        maiores laboriosam odit quae.</p>
+                        <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
         </div>
     </section>
 
