--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <h3>Digital Marketing</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam fugiat veritatis, repudiandae eos,
                     accusantium earum sequi ullam facilis natus dolore odit ducimus unde molestias!</p>
-                    <a href="#" class="btn">Read More </a>
+                <a href="#" class="btn">Read More </a>
             </div>
         </div>
     </section>
@@ -108,7 +108,7 @@
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum similique qui esse, assumenda
                         maiores laboriosam odit quae.</p>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
@@ -117,7 +117,7 @@
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum similique qui esse, assumenda
                         maiores laboriosam odit quae.</p>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
@@ -126,7 +126,7 @@
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum similique qui esse, assumenda
                         maiores laboriosam odit quae.</p>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
@@ -135,7 +135,7 @@
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum similique qui esse, assumenda
                         maiores laboriosam odit quae.</p>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
@@ -144,7 +144,7 @@
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum similique qui esse, assumenda
                         maiores laboriosam odit quae.</p>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
@@ -153,10 +153,28 @@
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum similique qui esse, assumenda
                         maiores laboriosam odit quae.</p>
-                        <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- contact section -->
+    <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me!</span></h2>
+
+        <form action="#">
+            <div class="input-box">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="Email Address">
+            </div>
+            <div class="input-box">
+                <input type="number" placeholder="Mobile Number">
+                <input type="text" placeholder="Email Subject">
+            </div>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send Message" class="btn">
+        </form>
     </section>
 
     <script src="scipt.js"></script>
