--- a/index.html
+++ b/index.html
@@ -177,6 +177,16 @@
         </form>
     </section>
 
+    <!-- footer design -->
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright & copy by Sakib | All Rights Reservd.</p>
+        </div>
+        <div class="footer-iconTop">
+            <a href="#home"><i class='bx bx-up-arrow-alt' ></i></a>
+        </div>
+    </footer>
+
     <script src="scipt.js"></script>
 </body>
 
