--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         </div>
     </footer>
 
-    <script src="scipt.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
