media query and animated

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="home-content">
             <h3>Hello, It's Me</h3>
             <h1>Abir Hossain <span>Sakib</span></h1>
-            <h3>And I'm a <span>Frontend Developer</span></h3>
+            <h3>And I'm a <span class="multiple-text"></span></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque nemo temporibus labore quam autem,
                 quisquam quibusdam adipisci voluptatum minima nulla sit natus incidunt quos!</p>
             <div class="social-media">
@@ -58,7 +58,7 @@
         </div>
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
-            <h3>Frontend Developer</h3>
+            <h3>Frontend <span>Developer</span></h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempore neque praesentium dolores
                 iusto quo quos ipsa optio quas odit itaque atque sed doloribus aspernatur nobis, consequatur ad!
                 Blanditiis numquam minus, sit sapiente repellendus voluptates? Debitis harum quos tempore laboriosam
@@ -186,6 +186,12 @@
             <a href="#home"><i class='bx bx-up-arrow-alt' ></i></a>
         </div>
     </footer>
+
+    <!-- scroll reveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- typed js -->
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
     <script src="script.js"></script>
 </body>
